# tRIad-Terminal

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_Assistant.docx  API_STRUCTURE.md  DevPod_Enhanced_Features.md  DevPod_Setup.md  LICENSE  Makefile  README.md  README.md.backup  README_MEMORY.md  REQUIREMENTS_NOTE.md  advanced_features_Version2.py  ai_assistant_Version1.py  ai_avatar_Version1.py  ai_avatar_Version2.py  ai_integration_Version1.py  api_tester.html  app.py  ascii_art_generator_Version1.py  code_formatter_Version1.py  code_formatter_Version2.py  config_manager_Version2.py  copilot.md  database_manager_Version2.py  demo_memory_system.py  deploy.js  devPod_Setup.md  devPod_enhanced_features.md  devenv.js  devenv.js.docx  enhanced_deployment_Version1.py  enhanced_deployment_Version2.py  enhanced_tunnel_Version1.py  enhanced_tunnel_Version2.py  enhanced_ui.py  enhanced_ui_Version1.py  (+44 more)
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ci.yml  compat-ci.yml  convert-docx.yml  pre-commit.yml
.triad_example/: core_memory.json
.triad_example/rooms/: terminal_session.jsonl
.triad_test/: core_memory.json
.triad_test/rooms/: demo.jsonl
agents/: README.md  agent-g-charter.md  agent-g.md  agentg.md  copilot-charter.md  copilot.md  echopilot-charter.md  echopilot.md  family-charter.md  storm-charter.md  storm.md
agents/learning/: ML_MODELS_ 4_ALL_AGENTS.md  ML_MODELS_FOR_ALL_AIS (1).md  assistant-ML.py  assistant_ml.py  claude-ML-implementation.ts  iris_knn_model (1).py  iris_knn_model.py  random_forest_iris (1).py  random_forest_iris.py  unstoppable-iris-model.json
api/: __init__.py  app.py  assistant.py  main.py  ml_status.py  perf_utils.py  schemas.py
api/routers/: __init__.py  assistant.py  health.py  ml_router.py  perf.py
assets/: IMAGE-GUIDE.md  README.md
assets/icons/: README.md
assets/images/: .gitkeep
assets/tools/: export_icons.py
config/: .env.example  __init__.py
docs/: AGENTS.md  ARCHITECTURE.md  BRAVE.md  BROWSER.md  CHARTERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSION.md  MEMORY.md  SECURITY.md  THEME.md  ai_assistant.md  npm_start.md  perf_baseline.md  performance_baseline.md  performance_integration.md  termux.md  triad_acces_points.md
examples/: performance_integration.py
ml/: __init__.py  predictor.py
models/: __init__.py  iris_knn.joblib  unstoppable_iris_model.pkl
predictors/: __init__.py  forest.py  knn.py
scripts/: check_ml_env.py  dev-setup.sh  install-brave.sh  install_termux.sh  multiagent_chat.py  run_api.py  run_termux.sh  start_api.sh
templates/: datasets_panel.html
tests/: test_api.py  test_api_ml_status.py  test_assistant_endpoints.py  test_integration.py  test_ml_import.py  test_smoke.py
tools/: __init__.py  convert_docx.py
triad/: __init__.py
triad_terminal/: __init__.py  config_datasets.py  perf_runtime.py  perf_utils.py  startup_datasets.py
utils/: __init__.py  browser.py
(+55 files in other folders)
