[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP","B","W"]
ignore = ["E501"]
extend-select = ["SIM","PERF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = false
warn_unused_configs = true
strict_optional = false

[project]
name = "triad-terminal"
description = "Triad Terminal — extensible terminal with multi-assistant command center, Storm integration, and dataset catalog."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0", 
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pyttsx3>=2.90",
    "playsound==1.2.2",
    "gTTS>=2.5.1",
    "SpeechRecognition>=3.10.0",
    # Multi-assistant command center dependencies
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    # Storm integration (placeholder - would need real Storm package)
    "websockets>=11.0.0",
    "redis>=4.5.0",
    # Dataset catalog
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "aiofiles>=23.0.0",
    # Enhanced CLI and UI
    "rich>=13.0.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
triad = "triad.cli:main"
triad-chat = "triad.agents.cli_chat:main"
triad-api = "api.main:run_server"